methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:10: error: not found: value vuBiscuit
      vuBiscuit = true
      ^MethodsReturning:14: error: not found: value vuBiscuit
  };return vuBiscuit
           ^